test/classes/vass/method-def-with-type-binding-error-record-2.chpl
record P {
  record R {
    def P.rr() {} // for now, this is an error
  }
}
